# mpci-transformer

./: .gitignore  CLAUDE.md  README.md  example_np_data.ipynb  pyproject.toml  session.txt
1_ANALYSIS/: 1_0_Explore_DFF_Session.ipynb  1_0_Explore_Session_Claude.py  2_Explore_Trials_Session.ipynb  2_Explore_Trials_Session_Claude.py  explore_raw_session.ipynb  explore_session.ipynb
1_ANALYSIS/OLD_UTILS/: __init__.py
1_ANALYSIS/old/: imaging_analysis.ipynb
2_PREPROCESSING/: 1_normalization.ipynb  2_bin_data.ipynb  2_df_f_analysis.ipynb  3_Export_Data.ipynb  4_Validate_Preprocessing.ipynb  4_Validate_Preprocessing_Claude.py  5_Test_Data_Loader.ipynb  Activity_Data_Loader.py  Test_Data_Loader.py  Test_TimeSeriesSplitter_Claude.py  Validate_LeakFree_Splitting_Claude.ipynb  Validate_LeakFree_Splitting_Claude.py  activity_preprocessor.py  analyze_normalization.py
3_MODELLING/: 1_baseline.ipynb  1_linear_regression.ipynb  2_transformer.ipynb  3_basic_time_series_transformer.ipynb  4_gluonts_probabilistic_time_series.ipynb  5_pytorch_forecasting.ipynb  7_1_raw_informer.ipynb  7_2_informer.ipynb  7_informer.ipynb  DLinear.ipynb
3_MODELLING/informer_calcium_model/: config.json
3_MODELLING/informer_calcium_model_continuous/: config.json
TUTORIALS/: IBL_ONE_Imaging.ipynb  IBL_ONE_tutorial.ipynb  load_mpci_data.py  one_ibl_setup_py.py  test.ipynb  test.py
TUTORIALS/Deep_Learning/: Lab_7_tutorial.ipynb  Lab_7_tutorial_answers.ipynb
utils/: activity_preprocessor.py  covariate_builder.py  data_splitter.py  load_meso_session.py  output_session.py
